cabal-version:      3.0
name:               pagila
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Travis Athougies
maintainer:         travis@athougies.net
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Pagila.Schema,
                      Pagila.Schema.V0001,
                      Pagila.Schema.V0002,
                      Pagila.Schema.CustomMigrateExample,
                      Pagila.CompileTimeTest
    -- other-modules:
    -- other-extensions:
    build-depends:    base,
                      time,
                      scientific,
                      bytestring,
                      text,
                      postgresql-simple,
                      beam-core,
                      beam-postgres,
                      beam-migrate

    hs-source-dirs:   src
    default-language: Haskell2010

executable pagila
    import:           warnings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    build-depends:    base,
                      pagila,
                      text,
                      beam-core,
                      beam-postgres,
                      beam-migrate

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010

test-suite pagila-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          pagilatest.hs
    build-depends:    base,
                      beam-core,
                      beam-migrate,
                      beam-postgres,
                      pagila,
                      conduit,
                      time,
                      bytestring,
                      text,
                      postgresql-simple

